# kdecrypt

./: .clang-format  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Messages.sh  README.md  SECURITY.md  kdecryptui.rc  org.guidlab.kdecrypt.desktop  org.guidlab.kdecrypt.metainfo.xml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml
.reuse/: dep5
doc/en/: index.docbook
doc/pl/: index.docbook
packaging/: PKGBUILD
po/: kdecrypt.pot
po/de/: kdecrypt.po
po/fr/: kdecrypt.po
po/ja/: kdecrypt.po
po/pl/: kdecrypt.po
po/zh_CN/: kdecrypt.po
src/: cryptohelper.cpp  cryptohelper.h  decryptedfile.cpp  decryptedfile.h  encryptdialog.cpp  encryptdialog.h  gpgengine.cpp  gpgengine.h  keygendialog.cpp  keygendialog.h  main.cpp  mainwindow.cpp  mainwindow.h  settingsdialog.cpp  settingsdialog.h  version.h.in  walletmanager.cpp  walletmanager.h
